# mydepotanalysis

./: .gitignore  LICENSE  README.md  setup.cfg
src/mydepotanalysis/: depot.py  transaction.py  trhistory.py
src/mydepotanalysis.egg-info/: PKG-INFO  SOURCES.txt
