[metadata]
name = mydepotanalysis
version = 0.0.1
author = Florian Sagolla
author_email = fsgl1@gmx.de
description = Simple classes and function to ge an overview on financial transactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/mydepotanalysis
project_urls =
    Bug Tracker = https://github.com/pypa/mydepotanalysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src